minor spacing issues fixed

--- a/css/home.scss
+++ b/css/home.scss
@@ -10,7 +10,7 @@
 	align-items: center;
 	min-height: 80vh;
 	vertical-align: middle;
-	width: 70%;
+	width: 60%;
 	margin: 0 auto;
 
 	#home-banner-text {
@@ -29,7 +29,7 @@
 
 	#home-banner-img {
 		flex: 1 1 0;
-		text-align: center;
+		text-align: right;
 
 		img {
 			width: 70%;
