--- a/css/speakers.scss
+++ b/css/speakers.scss
@@ -44,13 +44,18 @@
 
 @media screen and (max-width: $breakpoint) {
 
-	.speaker {
-		flex-direction: column !important;
-		padding: 0;
-		margin: 0 0 10vh 0 !important;
+	.speaker-list {
 
-		&:nth-of-type(even) .speaker-image {
-			@include transform(scaleX(1), !important);
+		padding: 0;
+
+		.speaker {
+			flex-direction: column !important;
+			padding: 0;
+			margin: 0 0 10vh 0 !important;
+
+			&:nth-of-type(even) .speaker-image {
+				@include transform(scaleX(1), !important);
+			}
 		}
 	}
 }
